# weather_search-web

./: README.md  index.html  main.py  settings.py
weathersearch/: pyproject.toml
