[tool.poetry]
name = "weathersearch"
version = "0.1.0"
description = ""
authors = ["S1avv"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.32.3"
flask-cors = "^4.0.1"
translate = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
